actualizo index.html
Agregue un nuevo link y cambie el texto de uno de los articulos por unas nuevas viñetas

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="#">Text Link</a></li>
         <li><a href="#">Text Link</a></li>
         <li><a href="#">Text Link</a></li>
+        <li><a href="#">Edgar Link</a></li>		
         <li class="last"><a href="#">Text Link</a></li>
       </ul>
     </nav>
@@ -54,8 +55,8 @@
         <article class="one_third lastbox">
           <figure><img src="images/demo/290x180.gif" width="290" height="180" alt="">
             <figcaption>
-              <h2>Indonectetus facilis</h2>
-              <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
+              <h2>Generador Lorem Ipsum</h2>
+              <p><ul><li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li><li> Eros ultricies volutpat ridiculus laoreet, leo morbi..</ul></p>
               <footer class="more"><a href="#">Read More &raquo;</a></footer>
             </figcaption>
           </figure>
