--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </figcaption>
           </figure>
         </article>
-        <article class="one_third lastbox">
+        <article class="one_third lastbox Edgar">
           <figure><img src="images/demo/290x180.gif" width="290" height="180" alt="">
             <figcaption>
               <h2>Generador Lorem Ipsum</h2>
